--- a/mta.yaml
+++ b/mta.yaml
@@ -8,6 +8,19 @@ modules:
    path: NAW_DB1
    requires:
     - name: hdi_NAW_DB1
+      properties:
+        TARGET_CONTAINER: ~{hdi-container-name}
+
+
+
+    - name: cross-container-service-1
+      group: SERVICE_REPLACEMENTS
+
+      properties:
+        key: ServiceName_1
+        service: ~{the-service-name}
+                          
+
 
 resources:
  - name: hdi_NAW_DB1
@@ -17,3 +30,11 @@ resources:
    properties:
       hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
+
+ - name: cross-container-service-1
+   parameters:
+      service-name: SFLIGHT
+   properties:
+      the-service-name: ${service-name}
+   type: org.cloudfoundry.existing-service
+
